<resources>
    <string name="app_name">Corrutinas</string>
    <string name="msj_inicio">Bienvenidos</string>
    <string name="msj_bar">Bienvenido</string>
    <string name="id">Ingresa tu ID</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ruta">Ingresa una ruta</string>
    <string name="btn_login">Entrar</string>
    <string name="internet">Para iniciar sesión, necesitas estar conectado a internet</string>

</resources>