<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".main.presentation.activities.progress"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:minHeight="?attr/actionBarSize"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="54dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/tv_msjbar"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/conejito"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_msjbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="212dp"
        android:text="@string/msj_bar"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ib_menu"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:background="@color/rojo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toEndOf="@+id/tv_msjbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/menu" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ti_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/user"
        android:textColor="@color/textv"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_usuario"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="124dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_usuario"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:background="@color/white"

            ></EditText>


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        android:textColor="@color/textv"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/textv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_usuario"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="318dp"
            android:layout_height="55dp"
            android:background="@color/white"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="249dp"></EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ruta"
        android:textColor="@color/textv"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ti_ruta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_ruta"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/et_ruta"
            android:layout_width="318dp"
            android:layout_height="55dp"
            android:background="@color/white"
            android:inputType="text"
            android:textColor="@color/black"></EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="334dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_ruta"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="#B3FFFFFF"
        android:orientation="vertical"
        android:padding="300dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="108dp"
            android:layout_height="93dp"
            android:layout_gravity="center"
            android:layout_marginStart="114dp"
            android:layout_marginEnd="110dp"
            android:visibility="visible"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>